<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity"
        android:background="@drawable/backmore">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/fondo_pacientes1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tittle1_paciente_home"
                android:layout_gravity="center"
                android:textSize="32sp"
                android:layout_marginTop="100dp"
                android:textColor="@color/white"
                android:fontFamily="@font/sfpro_medium"
                />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paciente_main_tittle1"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:fontFamily="@font/sfpro_medium"
            />


        <EditText
            android:id="@+id/nombre_paciente_main"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="#263238"
            android:hint="@string/recuadro_nombre"
            android:inputType="text"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:textColorHint="#BDBDBD"
            android:textAllCaps="false"
            android:fontFamily="@font/sfpro_medium"/>


        <EditText
            android:id="@+id/dni_paciente_main"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="#263238"
            android:hint="@string/recuadro_DNI"
            android:inputType="text"
            android:textSize="15sp"
            android:textColorHint="#BDBDBD"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:fontFamily="@font/sfpro_medium"
            />

        <EditText
            android:id="@+id/edad_paciente_main"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="#263238"
            android:hint="@string/recuadro_edad"
            android:inputType="text"
            android:textSize="15sp"
            android:textColorHint="#BDBDBD"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:fontFamily="@font/sfpro_medium"
            />

        <EditText
            android:id="@+id/enfermedad_paciente_main"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="#263238"
            android:hint="@string/recuadro_enfermedad"
            android:inputType="text"
            android:textSize="15sp"
            android:textColorHint="#BDBDBD"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:fontFamily="@font/sfpro_medium"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paciente_main_tittle2"

                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:fontFamily="@font/sfpro_medium"
                />

            <CheckBox
                android:id="@+id/yes_box"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Si"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginLeft="8dp"
                android:textColor="@color/white"
                />
        </LinearLayout>




        <Button
            android:id="@+id/subirDatos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paciente_main_b1"
            android:layout_marginTop="20dp"
            android:backgroundTint="#2e7d32"
            android:onClick="SubirDatos"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:fontFamily="@font/sfpro_medium"
            android:textColor="#e0e0e0"
            />




    </LinearLayout>

</ScrollView>